apps/gramnuri-web/overlays/prod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gramnuri-web
spec:
  selector:
    matchLabels:
      app: gramnuri-web
  replicas: 2
  template:
    spec:
      imagePullSecrets:
        - name: ghcr-image-pull-secrets
      containers:
        - name: gramnuri-web
          resources:
            requests:
              cpu: 200m
              memory: 500Mi
            limits:
              cpu: 200m
              memory: 500Mi
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
