apps/gramnuri-web/overlays/prod/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: gramnuri-web-httproute
  namespace: prod
spec:
  hostnames:
    - landskipifyai.com
    - www.landskipifyai.com
